--- a/index.ipynb
+++ b/index.ipynb
@@ -144,13 +144,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly\n",
     "\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
     "trace0 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy'], 'y': [8, 11, 10]}\n",
     "\n",
     "\n",
-    "plotly.offline.iplot([trace0])"
+    "plotly.offline.iplot([trace0])import plotly\n"
    ]
   },
   {
@@ -213,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
